Changes in styles

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                         <p>Timer</p>
                         <p>Stand</p>
                         <p>Scale</p>
-                        <p><b>Material:</b></p>
-                        <p>Water</p>
-                        <p><b>Procedure</b></p>
-                        <p>Attach the spring to the hook connected to the stand.</p>
+                        <p class="headerP"><b>Material:</b></p>
+                        <p class="firstPmb0">Water</p>
+                        <p class="headerP"><b>Procedure</b></p>
+                        <p class="firstPmb0">Attach the spring to the hook connected to the stand.</p>
                         <p>Attach a bob of known mass to the spring.</p>
                         <p>Hold and drag the bob away from its resting position and leave at the desired amplitude.</p>
                         <p>The bob starts oscillating from top to bottom in a linear direction.</p>
