--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                         <p><b>Aim:</b> To explore oscillatory motion using spring and bob system.</p>
                         <p>Spring & Bob</p>
                         <p>A bob attached to a spring and displaced from its mean position will oscillate top to bottom in the vertical direction. This type of motion is known as Simple Harmonic Motion.</p>
-                        <p>Amplitude &ndash; The maximum displacement of the bob from the mean position (centre) towards one side is known as its Amplitude.</p>
-                        <p>Time Period &ndash; The time taken by bob to complete one oscillation (from one extreme position to the other) is known as the Time Period and is usually measured in seconds.</p>
+                        <p>Amplitude - The maximum displacement of the bob from the mean position (centre) towards one side is known as its Amplitude.</p>
+                        <p>Time Period - The time taken by bob to complete one oscillation (from one extreme position to the other) is known as the Time Period and is usually measured in seconds.</p>
                         <p>Simple Harmonic Motion</p>
                         <p>Oscillatory motion is also known as periodic motion because of its repetitive nature and is either in form of circular motion or as wave motion. The simplest type of oscillatory motion is the simple harmonic motion (SHM). A body or an object is said to be in simple harmonic motion when the force that tries to restore the object to its rest position is proportional to the displacement of the object. The force, which tries to restore the object to its original position or equilibrium, is termed as the restoring force.</p>
                         <p>If the displacement of the body in SHM is plotted over time, we get a Sine curve.</p>
