--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <div class="springWrapper">
                      <img class="springImage" src="assets/images/crops/spring.png">
                   </div>
-                  <div class="springWeight">
+                  <div id="springWeightDiv" class="springWeight" style="top: 232px;">
                      <img class="weightImage" src="assets/images/crops/weight_op2.png">
                      <span class="weightDispText"></span>
                   </div>
