--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport"
+   <!--<meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Spring Oscillation - Experimental Verification of Time Period</title>
    <link rel="stylesheet" href="assets/jslib/normalize_5.0.css">
    <link rel="stylesheet" href="assets/jslib/jquery_ui_1.12.1/jquery_ui_1.12.1.min.css">
