--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                      <div class="prevProcd"></div>
                      <div class="nextProcd"></div>
                      <img class="showObj" src="assets/images/showObjM.gif" />
-                     <span class="showObjTxt">Show Object</span>
+                     <span class="showObjTxt">Show</span>
                      <img class="closeProcd closeProcdBefore" src="assets/images/closeUp.png" />
                      <span class="closeProcdTxt">CLOSE</span>
                      <div class="procedSteps procedSteps1">
